--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -10,9 +10,9 @@
     <div class="back">
         <img src="./img/currency.jpg" alt="" class="backImg">
     </div>
-<h1> Wymiana</h1>
     <div class="container">
-
+        <h1> Wymiana</h1>
+        <button class="exchange"> Wymień</button>
     </div>
 </body>
 </html>
