--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="back">
-        <img src="./img/currency.jpg" alt="" class="backImg">
+        <img src="./img/exchange.png" alt="" class="backImg">
     </div>
     <div class="container">
-        <h1> Wymiana</h1>
-        <button class="exchange"> Wymień</button>
+        <div class="graph"></div>
+        <button class="exchange">Wymień</button>
     </div>
 </body>
 </html>
