--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --color: #ffcc00;
+    --color: #ac00e6;
     --dark: #1b1b1b;
 }
 
@@ -23,8 +23,8 @@ body {
 }
 
 .container{
-    width:66%;
-    height:66%;
+    width:75%;
+    height:75%;
      background: rgba(0,0,0,0.75);
      background: linear-gradient(to right bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.75));
      border-radius: 20px;
@@ -35,21 +35,26 @@ body {
 .backImg{
     position: absolute;
     top: 0;
-    right: 60%;
-    height:25vh;
-    animation: slide 5s linear infinite;
+    right: 100vh;
+    height: 20vh;
+    animation: slide 15s linear infinite;
 }
+
 @keyframes slide {
- from {transform: translateY(-25vh)}
- to {transform: translateY(100vh)}
+    from {
+            transform: translateX(-25vh) translateY(-25vh);
+         }
+    to {
+            transform:translateX(125vh) translateY(100vh);
+       }
 }
 
 button{
     width: 350px;
-    height: 10%;
+    height: 7%;
 
     margin-top: 32px;
-    font-size: 42px;
+    font-size: 38px;
     font-weight: 700;
     color: #fff;
     background: var(--color);
@@ -68,15 +73,34 @@ button:after {
     content:"";
     background-color:rgba(255,255,255,0.4);
     width: 50px;
-    height: 100%;
+    height: 100px;
     position: absolute;
     left: -100px;
-    top: 0px;
+    top: -10px;
     transform: rotate(20deg);
     transition: transform 0.5s;
 }
 
 button:hover:after {
     transform: translateX(500px) rotate(20deg);
+
+}
+
+.exchange{
+    position: relative;
+
+    bottom:5%
+    left: 40%;
+
+}
+
+.graph{
+    width:90%;
+    height:50%;
+    background-color: red;
+
+    position: relative;
+    top: 5%;
+    left: 5%;
 
 }
