--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -15,33 +15,66 @@
     <div class="graph"></div>
     <div class="selectors">
 
-        <div class="selector">
+        <div class="selectorHave">
             <div id="selectFieldHave">
-                <p id="selectText">Posiadana waluta</p>
+                <p id="selectTextHave">Mam walutę</p>
             </div>
 
-            <ul id="list" class="hide">
-                <li class="options">
+            <ul id="listHave" class="hideHave">
+                <li class="optionsHave">
                     <img src="./img/PLN.png">
                     <p>PLN</p>
                 </li>
-                <li class="options">
+                <li class="optionsHave">
                     <img src="./img/EUR.png">
                     <p>EUR</p>
                 </li>
-                <li class="options">
+                <li class="optionsHave">
                     <img src="./img/USD.png">
                     <p>USD</p>
                 </li>
-                <li class="options">
+                <li class="optionsHave">
                     <img src="./img/GBP.png">
                     <p>GBP</p>
                 </li>
-                <li class="options">
+                <li class="optionsHave">
                     <img src="./img/CHF.png">
                     <p>CHF</p>
                 </li>
-                <li class="options">
+                <li class="optionsHave">
+                    <img src="./img/JPY.png">
+                    <p>JPY</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="selectorGet">
+            <div id="selectFieldGet">
+                <p id="selectTextGet">Otrzymam walutę</p>
+            </div>
+
+            <ul id="listGet" class="hideGet">
+                <li class="optionsGet">
+                    <img src="./img/PLN.png">
+                    <p>PLN</p>
+                </li>
+                <li class="optionsGet">
+                    <img src="./img/EUR.png">
+                    <p>EUR</p>
+                </li>
+                <li class="optionsGet">
+                    <img src="./img/USD.png">
+                    <p>USD</p>
+                </li>
+                <li class="optionsGet">
+                    <img src="./img/GBP.png">
+                    <p>GBP</p>
+                </li>
+                <li class="optionsGet">
+                    <img src="./img/CHF.png">
+                    <p>CHF</p>
+                </li>
+                <li class="optionsGet">
                     <img src="./img/JPY.png">
                     <p>JPY</p>
                 </li>
@@ -59,6 +92,7 @@
 
     </div>
     <button class="exchange">Wymień</button>
+
 </div>
 
 
