--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -10,7 +10,7 @@
 <div class="back">
     <img src="./img/coins.png" alt="" class="coinsImg">
     <img src="./img/exchangeBack.png" alt="" class="backImg">
-    <img src="./img/exchangeLoad.png" alt="" class="exchangeImg">
+    <img src="./img/exchangeLoad.png" alt="" id="exchangeImg">
 </div>
 <div class="container">
     <div class="graph"></div>
