Added functionality to button calculate

--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -20,7 +20,7 @@
             Kwota
         </div>
         <div class="commission">
-            <input type="number" id="commission" value="0.1">
+            <input type="number" id="commission" value="0.05">
             Prowizję
         </div>
         <div class="selectorHave">
@@ -90,7 +90,7 @@
         </div>
     </div>
     <div class="result">
-        <p>Wynik:
+        <p id="resultId">Wynik:
             <span th:text="${calculation}"></span>
         </p>
         <p>Ostatnia transakcja:
