added currencyRate endpoint

--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -93,7 +93,7 @@
         <p id="resultId">Wynik:
             <span th:text="${calculation}"></span>
         </p>
-        <p>Ostatnia transakcja:
+        <p id="lastBalanceId">Ostatnia transakcja:
             <span th:text="${lastBalance}"></span>
         </p>
 
