fixed Kurs ostatniej transakcji

--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -99,7 +99,7 @@
         <p id="resultId">Wynik:
             <span th:text="${calculation}"></span>
         </p>
-        <p id="lastBalanceId">Ostatnia transakcja:
+        <p id="lastBalanceId">Kurs ostatniej transakcji:
             <span th:text="${lastBalance}"></span>
         </p>
     </div>
