fix and add throw to CalculationEndPoint

--- a/src/main/resources/templates/mainView.html
+++ b/src/main/resources/templates/mainView.html
@@ -27,7 +27,7 @@
         </div>
         <div class="commission">
             <input type="number" id="commission" value="0.05">
-            Prowizję
+            Prowizja
         </div>
         <div class="selectorHave">
             <div id="selectFieldHave">
